--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 <body>
   <div id="wall">
-    <div class="tag-1"></div>
+    <div class="tag-1">
+      .tag-1 {
+        background: url(../images/tag-1.png) no-repeat;
+        z-index: 7;
+        display: block;
+      }
+    </div>
     <div id="tag-2"></div>
     <div id="tag-3" class="slick wicked"></div>
     <div class="parent">
